❕ Fix word-wrap en tablas

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -42,3 +42,8 @@
 .numero_partida:hover{
     color: #6777ef;
 }
+
+
+td{
+    word-break:break-all
+}
